made the css style awesome

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Wikimedia</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+</head>
+<body>
+    <div class="top">
+        <p><b>Wikimedia</b> is a global <a href="https://meta.wikimedia.org/wiki/Wikimedia_movement">movement</a> whose <a href="https://wikimediafoundation.org/wiki/Mission_statement">mission</a> is to bring free educational content to the world.</p>
+        <p>Through various <a href="https://wikimediafoundation.org/wiki/Our_projects">projects</a>, <a href="https://meta.wikimedia.org/wiki/Wikimedia_chapters">chapters</a>, and the support structure of the non-profit Wikimedia Foundation, 
+        Wikimedia <a href="https://wikimediafoundation.org/wiki/Vision">strives</a> to bring about a world in which every single human being can freely share in the sum of all knowledge.</p>
+        <p><b><div class="right">Welcome to Wikimedia.</div></b></p>
+    </div>
+    <div class="middle">
+        <div class="col">
+            <a href="https://wikipedia.org"><img src="wikipedia.png"></a>
+            <a href="https://wikisource.org/"><img src="wikisource.png"></a>
+            <a href="https://www.mediawiki.org/"><img src="mediawikiwiki.png"></a>
+            <a href="https://meta.wikimedia.org/"><img src="metawiki-2x.png"></a>
+        </div>
+        <div class="col midl">
+            <a href="https://www.wiktionary.org/"><img src="270px-Wiktionary-logo-en.svg.png"></a>
+            <a href="https://www.wikinews.org/"><img src="Wiki.png"></a>
+            <a href="https://www.wikidata.org/"><img src="wikidatawiki.png"></a>
+            <a href="https://incubator.wikimedia.org/"><img src="incubatorwiki.png"></a>
+        </div>
+        <div class="col midr">
+            <a href="https://www.wikiquote.org/"><img src="Wikiquote-logo_project_2x.png"></a>
+            <a href="https://www.wikiversity.org/"><img src="enwikiversity.png"></a>
+            <a href="https://commons.wikimedia.org/"><img src="commonswiki.png"></a>
+            <a href="https://wikitech.wikimedia.org/"><img src="Labslogo_thumb.png"></a>
+        </div>
+        <div class="col">
+            <a href="https://www.wikibooks.org/"><img src="270px-Wikibooks-logo-en-noslogan.svg.png"></a>
+            <a href="https://species.wikimedia.org/"><img src="specieswiki.png"></a>
+            <a href="https://www.wikivoyage.org/"><img src="wikivoyage.png"></a>
+            <a href="https://wikimediafoundation.org/"><img src="foundationwiki-2x.png"></a>
+        </div>
+    </div>
+    <footer>
+        <div class="center">
+            <hr>
+            <p class="smallfont">Imagine a world in which every single human being can freely share in the sum of all knowledge. That's our commitment.</p>
+            <a href="https://wikimediafoundation.org/wiki/Terms_of_Use"><span>Terms of use</span></a>
+            <a href="https://wikimediafoundation.org/wiki/Privacy_policy"><span>Privacy policy</span></a>
+        </div>
+    </footer>
+</body>
+</html>
