fixed the file structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Wikimedia</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="top">
@@ -14,28 +14,28 @@
     </div>
     <div class="middle">
         <div class="col">
-            <a href="https://wikipedia.org"><img src="wikipedia.png"></a>
-            <a href="https://wikisource.org/"><img src="wikisource.png"></a>
-            <a href="https://www.mediawiki.org/"><img src="mediawikiwiki.png"></a>
-            <a href="https://meta.wikimedia.org/"><img src="metawiki-2x.png"></a>
+            <a href="https://wikipedia.org"><img src="./img/wikipedia.png"></a>
+            <a href="https://wikisource.org/"><img src="./img/wikisource.png"></a>
+            <a href="https://www.mediawiki.org/"><img src="./img/mediawikiwiki.png"></a>
+            <a href="https://meta.wikimedia.org/"><img src="./img/metawiki-2x.png"></a>
         </div>
         <div class="col midl">
-            <a href="https://www.wiktionary.org/"><img src="270px-Wiktionary-logo-en.svg.png"></a>
-            <a href="https://www.wikinews.org/"><img src="Wiki.png"></a>
-            <a href="https://www.wikidata.org/"><img src="wikidatawiki.png"></a>
-            <a href="https://incubator.wikimedia.org/"><img src="incubatorwiki.png"></a>
+            <a href="https://www.wiktionary.org/"><img src="./img/270px-Wiktionary-logo-en.svg.png"></a>
+            <a href="https://www.wikinews.org/"><img src="./img/Wiki.png"></a>
+            <a href="https://www.wikidata.org/"><img src="./img/wikidatawiki.png"></a>
+            <a href="https://incubator.wikimedia.org/"><img src="./img/incubatorwiki.png"></a>
         </div>
         <div class="col midr">
-            <a href="https://www.wikiquote.org/"><img src="Wikiquote-logo_project_2x.png"></a>
-            <a href="https://www.wikiversity.org/"><img src="enwikiversity.png"></a>
-            <a href="https://commons.wikimedia.org/"><img src="commonswiki.png"></a>
-            <a href="https://wikitech.wikimedia.org/"><img src="Labslogo_thumb.png"></a>
+            <a href="https://www.wikiquote.org/"><img src="./img/Wikiquote-logo_project_2x.png"></a>
+            <a href="https://www.wikiversity.org/"><img src="./img/enwikiversity.png"></a>
+            <a href="https://commons.wikimedia.org/"><img src="./img/commonswiki.png"></a>
+            <a href="https://wikitech.wikimedia.org/"><img src="./img/Labslogo_thumb.png"></a>
         </div>
         <div class="col">
-            <a href="https://www.wikibooks.org/"><img src="270px-Wikibooks-logo-en-noslogan.svg.png"></a>
-            <a href="https://species.wikimedia.org/"><img src="specieswiki.png"></a>
-            <a href="https://www.wikivoyage.org/"><img src="wikivoyage.png"></a>
-            <a href="https://wikimediafoundation.org/"><img src="foundationwiki-2x.png"></a>
+            <a href="https://www.wikibooks.org/"><img src="./img/270px-Wikibooks-logo-en-noslogan.svg.png"></a>
+            <a href="https://species.wikimedia.org/"><img src="./img/specieswiki.png"></a>
+            <a href="https://www.wikivoyage.org/"><img src="./img/wikivoyage.png"></a>
+            <a href="https://wikimediafoundation.org/"><img src="./img/foundationwiki-2x.png"></a>
         </div>
     </div>
     <footer>
